# eiger-framework

./: .coverage.claude.pid13.XCUTAxex.Hm0V2E8GGHEh  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  eibench_raw_claims.json  engine.py  epistemic.py  pipeline_eibench.py  pyproject.toml
clab-eibench-research-net/: ansible-inventory.yml  nornir-simple-inventory.yml  topology-data.json
clab-eibench-research-net/.tls/ca/: ca.key  ca.pem
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATASETS.md  REPRODUCING.md
eiger/: __init__.py
eiger/attacks/: README.md  __init__.py  attribution.py  causal.py  numerical.py  registry.py  temporal.py
eiger/config/: README.md  __init__.py  settings.py
eiger/core/: README.md  __init__.py  exceptions.py  interfaces.py  models.py
eiger/datasets/: README.md
eiger/experiments/: README.md
eiger/ingestion/: README.md  __init__.py  corpus_builder.py
eiger/llm/: README.md
eiger/metrics/: README.md  __init__.py  ers.py  ffr.py  registry.py  source_integrity.py
eiger/retrieval/: README.md
eiger/utils/: README.md  __init__.py  logging.py  seeding.py
eiger/vector_stores/: README.md
experiments/: README.md  ablation_attacks.yaml  baseline_v1.yaml
infra/containerlab/: README.md  topology.clab.yml
tests/: README.md  conftest.py
tests/unit/: test_attacks.py  test_config.py  test_corpus_builder-py  test_corpus_builder.py  test_logging.py  test_metrics.py  test_models.py  test_seeding.py  test_source_integrity.py
