[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eiger"
version = "0.1.0"
description = "EIBench: Epistemic Integrity Benchmark for RAG systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "EIGER Research Team" }]

dependencies = [
    # Vector store
    "qdrant-client>=1.9.0,<2.0",
    # Embeddings
    "sentence-transformers>=3.0.0,<4.0",
    # Evaluation framework
    "ragas>=0.1.0",
    # NLI for Source Integrity metric
    "transformers>=4.40.0,<5.0",
    "torch>=2.2.0",
    # Configuration & validation
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "python-dotenv>=1.0.0",
    # Structured logging
    "structlog>=24.1.0",
    # Sparse retrieval
    "rank-bm25>=0.2.2",
    # Numerics
    "numpy>=1.26.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-snapshot>=0.9.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
eiger = "eiger.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eiger*"]

# ─── Ruff (linter + formatter) ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

# ─── Mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ─── Pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=eiger --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]
